#add_executable(forgemush mush.cpp)
#set_property(TARGET forgemush PROPERTY ENABLE_EXPORTS)
#add_dependencies(forgemush forgemushcore)
#target_include_directories(forgemush PUBLIC ../include ${CONAN_INCLUDE_DIRS})
#target_link_libraries(forgemush forgemushcore ${CONAN_LIBS})

add_executable(forgeportal portal.cpp)
add_dependencies(forgeportal forgeportalcore)
target_include_directories(forgeportal PUBLIC ../include ${CONAN_INCLUDE_DIRS})
target_link_libraries(forgeportal ${CONAN_LIBS} forgeportalcore Threads::Threads OpenSSL::SSL)

#add_executable(core core.cpp)
#target_compile_options(core PUBLIC -fPIC)
#add_dependencies(core mudcore)
#target_include_directories(core PUBLIC ../include ${CONAN_INCLUDE_DIRS})
#target_link_libraries(core mudcore ${CONAN_LIBS})